# py-sikulix

./: .gitignore  AGENTS.md  README.en.md  README.md  pyproject.toml
examples/: basic_usage.py
src/py_sikulix/: __init__.py  app.py  base_region.py  client.py  gateway.py  keys.py  location.py  match.py  pattern.py  region.py  screen.py  settings.py
src/py_sikulix/extend/: __init__.py  finder.py
tests/: conftest.py  test_gateway.py  test_location.py  test_pattern.py  test_region.py
