[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-sikulix"
version = "0.1.0"
description = "Python3.9+ client for SikuliX GUI automation via Py4J"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["sikulix", "automation", "testing", "py4j", "screen", "ocr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Desktop Environment",
]
requires-python = ">=3.9"
dependencies = [
    "py4j>=0.10.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
sikulix-gateway = "py_sikulix.gateway:main"


[project.urls]
Homepage = "https://github.com/0xn0ne/py-sikulix"
Repository = "https://github.com/0xn0ne/py-sikulix"
Issues = "https://github.com/0xn0ne/py-sikulix/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
py_sikulix = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: 需要真实 Java 网关的集成测试",
    "slow: 标记为慢速测试",
]

[tool.ruff]
target-version = "py39"
line-length = 120
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B904",   # raise without from inside except
    "UP007",   # non pep604 annotation union
    "UP045",   # non pep604 annotation optional
]

[tool.ruff.isort]
known-first-party = ["py_sikulix"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "py4j.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/py_sikulix"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]